infra/k8s/microservices-blog-query.yaml
apiVersion: v1
kind: Pod
metadata:
    name: microservices-blog-query
spec:
    containers:
        - name: microservices-blog-query
          image: microservices-blog-query:0.0.1
          resources:
              limits:
                  memory: "128Mi"
                  cpu: "500m"
