infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: posts-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: posts
    template:
        metadata:
            labels:
                app: posts
        spec:
            containers:
                - name: posts
                  image: rlr524/msb-posts:latest
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "0.5"
---
apiVersion: v1
kind: Service
metadata:
    name: posts-cluster-srv
spec:
    selector:
        app: posts
    type: ClusterIP
    ports:
        - name: posts
          protocol: TCP
          port: 4000
          targetPort: 4000
