infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: posts-srv
spec:
    type: NodePort
    selector:
        app: posts
    ports:
        - name: posts
          protocol: TCP
          port: 4000 #This is the port for the NodePort service itself
          targetPort: 4000 #This is the port the app is listening for traffic on...these are usually the same ports
